# Revenant

./: CHANGELOG  CMakeLists.txt  Constants.py  Cycotic.py  Makefile  README.md  Revanent.py  Revenant.py  Talon.py
.github/: FUNDING.yml
Agent/: CMakeLists.txt  Makefile  makefile
Agent/Include/: AntiDebug.h  Asm.h  Command.h  CommandStrings.h  Config.h  Core.h  Dbg.h  Defs.h  Native.h  Obf_Strings.h  ObfuscateStrings.h  Obfuscation.h  Package.h  Parser.h  Poly.h  Revenant.h  Revnt.h  RevntStrings.h  Strings.h  Structs.h  Talon.h  Transport.h  Utilities.h
Agent/Source/: AntiDebug.c  Asm.c  Command.c  Core.c  Main.c  MemCopy.c  ObfuscateStrings.c  Obfuscation.c  Package.c  Parser.c  Poly.c  Transport.c  Utilities.c
Agent/Source/Asm/: ntdll.asm
havoc/: agent.py  externalc2.py  service.py
llvm-mingw/aarch64-w64-mingw32/lib/: libwinpthread.la
llvm-mingw/aarch64-w64-mingw32/share/mingw32/: COPYING.winstorecompat.txt
llvm-mingw/armv7-w64-mingw32/lib/: libwinpthread.la
llvm-mingw/generic-w64-mingw32/include/: _mingw.h  _mingw_mac.h  activation.h  activaut.h  activdbg.h  activdbg100.h  activprof.h  activscp.h  adhoc.h  alg.h  amstream.h  amvideo.h  asyncinfo.h  audioclient.h  audioendpoints.h  audiopolicy.h  austream.h  bdaiface.h  bdaiface.idl  bits.h  bits1_5.h  bits2_0.h  bits2_5.h  bits3_0.h  bits5_0.h  comadmin.h  comcat.h  commoncontrols.h  control.h  credentialprovider.h  credentialprovider.idl  ctfutb.h  ctxtcall.h  d3d10.h  d3d10_1.h  d3d10sdklayers.h  d3d11.h  d3d11.idl  d3d11_1.h  d3d11_2.h  (+258 more)
llvm-mingw/generic-w64-mingw32/include/psdk_inc/: intrin-impl.h
llvm-mingw/generic-w64-mingw32/include/sec_api/: stdio_s.h  string_s.h  wchar_s.h
llvm-mingw/i686-w64-mingw32/lib/: libwinpthread.la
llvm-mingw/x86_64-w64-mingw32/lib/: libwinpthread.la
